--- a/.github/workflows/hatchet_app_cleaner.yml
+++ b/.github/workflows/hatchet_app_cleaner.yml
@@ -1,9 +1,9 @@
 name: Hatchet app cleaner
 
 on:
-  schedule:
+  #schedule:
     # Daily at 6am UTC.
-    - cron: "0 6 * * *"
+  #  - cron: "0 6 * * *"
   # Allow the workflow to be manually triggered too.
   workflow_dispatch:
 
