--- a/.github/workflows/inventory.yml
+++ b/.github/workflows/inventory.yml
@@ -1,8 +1,8 @@
 name: Update Inventory
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '00 4 * * 1-5'
+  #schedule:
+  #  - cron: '00 4 * * 1-5'
 
 jobs:
   update-nodejs-inventory:
