Update inventory related entries in CODEOWNERS (#1208)
Corrects the inventory-file related `CODEOWNERS` entry to match the
actual naming of the files in this repo:
- `inventory/node.toml`
- `inventory/yarn.toml`

(Only the CNB uses `inventory.toml`)

GUS-W-14941625.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,4 +7,4 @@ buildpack.toml @joshwlewis @colincasey
 CHANGELOG.md @joshwlewis @colincasey
 Cargo.toml @joshwlewis @colincasey
 Cargo.lock @joshwlewis @colincasey
-inventory.toml @joshwlewis @colincasey
+inventory/ @joshwlewis @colincasey
