Update CI to Ubuntu 24.04 runner images (#1296)
Now that Ubuntu 24.04 images are available on GitHub Actions, we can update from the Ubuntu 22.04 images.

See also:
https://github.com/actions/runner-images/issues/9848
https://github.com/actions/runner-images/blob/main/images/ubuntu/Ubuntu2404-Readme.md
https://salesforce.quip.com/bu6UA0KImOxJ#temp:C:GZRd13d2ce2d455470495cbd34cf

GUS-W-16238120.

--- a/.github/workflows/inventory.yml
+++ b/.github/workflows/inventory.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   update-nodejs-inventory:
     name: Update Node.js Engine Inventory
-    runs-on: pub-hk-ubuntu-22.04-small
+    runs-on: pub-hk-ubuntu-24.04-ip
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -54,7 +54,7 @@ jobs:
           
   update-yarn-inventory:
     name: Update Node.js Yarn Inventory
-    runs-on: pub-hk-ubuntu-22.04-small
+    runs-on: pub-hk-ubuntu-24.04-ip
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
