Heroku-20 Stack End-of-life (#1408)
* As [announced here](https://devcenter.heroku.com/changelog-items/3230), the `heroku-20` stack is no longer supported for builds on Heroku. This PR drops all references for the now end-of-life stack.

* Update CHANGELOG.md

Signed-off-by: Colin Casey <casey.colin@gmail.com>

---------

Signed-off-by: Colin Casey <casey.colin@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       options: --user root
     strategy:
       matrix:
-        stack_number: ["20", "22", "24"]
+        stack_number: ["22", "24"]
     env:
       STACK: heroku-${{ matrix.stack_number }}
     steps:
@@ -33,7 +33,7 @@ jobs:
       options: --user root
     strategy:
       matrix:
-        stack_number: ["20", "22", "24"]
+        stack_number: ["22", "24"]
     env:
       STACK: heroku-${{ matrix.stack_number }}
     steps:
