Upgrading the Ruby version used by automation (#1450)
Seeing automation failures with:

```
excon-1.2.8 requires ruby version >= 3.1.0, which is incompatible with the

current version, ruby 2.7.8p225
```

e.g.; https://github.com/heroku/heroku-buildpack-nodejs/actions/runs/16682096519/job/47222966798?pr=1445

This PR updates the version of Ruby used in these automation workflows to 3.1.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.7'
+          ruby-version: 3.1
           bundler-cache: true
       - name: Run hatchet tests
         run: make hatchet
