Add Cargo.toml/lock to CODEOWNERS (#1489)
Now that the repo has Rust components, so that it matches that for the CNB:
https://github.com/heroku/buildpacks-nodejs/blob/f5bcb5f3af82b136a82e989a0a72b16a99bd2f16/.github/CODEOWNERS#L10-L11

Signed-off-by: Ed Morley <501702+edmorley@users.noreply.github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,6 +6,8 @@
 # However, request review from the language owner instead for files that are updated
 # by Dependabot or inventory/release automation, to reduce team review request noise.
 CHANGELOG.md @colincasey
+Cargo.toml @colincasey
+Cargo.lock @colincasey
 Gemfile.lock @colincasey
 inventory/ @colincasey
 npm-shrinkwrap.json @colincasey
